grpc-recorder/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: listener_8086
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8086
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          generate_request_id: true
          preserve_external_request_id: true
          forward_client_cert_details: SANITIZE
          set_current_client_cert_details:
            uri: true
          access_log:
          - name: envoy.file_access_log
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: "/var/log/envoy/grpc-access.log"
              log_format:
                text_format_source:
                  inline_string: "[%START_TIME%] REQUEST_ID=%REQ(X-REQUEST-ID)% METHOD=%REQ(:METHOD)% PATH=%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% PROTOCOL=%PROTOCOL% RESPONSE_CODE=%RESPONSE_CODE% RESPONSE_FLAGS=%RESPONSE_FLAGS% BYTES_RECEIVED=%BYTES_RECEIVED% BYTES_SENT=%BYTES_SENT% DURATION=%DURATION% UPSTREAM_SERVICE_TIME=%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% FORWARDED_FOR=%REQ(X-FORWARDED-FOR)% USER_AGENT=%REQ(USER-AGENT)% AUTHORITY=%REQ(:AUTHORITY)% UPSTREAM_HOST=%UPSTREAM_HOST% UPSTREAM_CLUSTER [...]
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: grpc_service
                  timeout: 0s
                  max_grpc_timeout: 0s
                  grpc_timeout_offset: 0s
          http_filters:
          - name: envoy.filters.http.ext_proc
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
              grpc_service:
                envoy_grpc:
                  cluster_name: recorder_service
              failure_mode_allow: true
              message_timeout: 2s
              processing_mode:
                request_header_mode: SEND
                request_body_mode: STREAMED
                request_trailer_mode: SEND

                response_header_mode: SEND
                response_body_mode: STREAMED
                response_trailer_mode: SEND
          - name: envoy.filters.http.grpc_web
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: grpc_service
    type: LOGICAL_DNS
    http2_protocol_options: {}
    load_assignment:
      cluster_name: grpc_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: host.docker.internal
                port_value: 8085
  - name: recorder_service
    type: STRICT_DNS
    connect_timeout: 5s
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {} 
    load_assignment:
      cluster_name: recorder_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: grpc-recorder-service
                port_value: 50051

layered_runtime:
  layers:
  - name: static_layer_0
    static_layer:
      overload:
        global_downstream_max_connections: 50000
